--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
     "scrollreveal": "^4.0.9",
+    "select2": "^4.1.0-rc.0",
     "stimulus": "^3.0.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
